# banner_template_agent

./: .gitignore  pyproject.toml
src/: main.py
src/agents/: banner_template_agent.py
src/browser/: crawl_freepik.py  crawl_tool.py
src/models/: __init__.py  gemini_llm.py
src/tools/: get_banner_template.py
